# ameba-rtos

./: CST328_TOUCH_DRIVER.md  LVGL_MUSIC_PLAYER_GUIDE.md  build_music_player.bat  configs_lvgl.conf  configs_lvgl_clean.conf  configs_lvgl_fixed.conf  enable_lvgl.bat  enable_lvgl.ps1  example_lvgl_music.c  fix_cmake.ps1  lvgl_sources.txt  lvgl_sources_with_spectrum.txt  lvgl_test_minimal.c  scan_lvgl_sources.ps1  update_cmake.ps1  update_cmake_spectrum.ps1
component/soc/amebasmart/atf/make_helpers/: build_env.mk  msys.mk
component/soc/amebasmart/main/ap/src/: CMakeLists.txt  app_lvgl_music.c  main.c
component/soc/amebasmart/main/hp/src/: CMakeLists.txt  app_mipi_display.c  app_mipi_display.h  main.c
example/peripheral/Display/lvgl_music/: BUILD_GUIDE.md  CMakeLists.txt  COMPILE_GUIDE.md  INDEX.md  INTEGRATION.md  NO_MENUCONFIG_SOLUTION.md  QUICKSTART.md  README.md  app_main.c  compile_lvgl.ps1  fix_build_env.ps1  main.c  setup_lvgl.ps1  test_build.ps1
tools/ameba/Flash/: Settings.json
